[package]
name = "config"
description = "component configurations for Pelikan"
authors = ["Brian Martin <bmartin@twitter.com>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
common = { path = "../common" }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
zookeeper = { workspace = true }
