[package]
name = "macros"
description = "Utility macros for use within pelikan"
authors = ["Sean Lynch <seanl@twitter.com>"]

version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
