[package]
name = "admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
config = { path = "../../config" }
crossbeam-channel = "0.5.0"
entrystore = { path = "../../entrystore" }
logger = { path = "../../logger" }
net = { path = "../../net" }
protocol-admin = { path = "../../protocol/admin" }
protocol-common = { path = "../../protocol/common" }
queues = { path = "../../queues" }
rustcommon-metrics = { git = "https://github.com/twitter/rustcommon" }
session = { path = "../../session" }
slab = "0.4.2"
waker = { path = "../waker" }