[package]
name = "proxy"
version = "0.0.2"
edition = "2021"
authors = ["Brian Martin <bmartin@twitter.com>"]
homepage = "https://pelikan.io"
repository = "https://github.com/twitter/pelikan"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
admin = { path = "../admin" }
common = { path = "../../common" }
config = { path = "../../config" }
crossbeam-channel = "0.5.0"
entrystore = { path = "../../entrystore" }
logger = { path = "../../logger" }
net = { path = "../../net" }
protocol-admin = { path = "../../protocol/admin" }
protocol-common = { path = "../../protocol/common" }
queues = { path = "../../queues" }
rustcommon-metrics = { git = "https://github.com/twitter/rustcommon" }
session = { path = "../../session" }
slab = "0.4.2"
waker = { path = "../waker" }
