[package]
name = "server-iouring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
buffer = { path = "../../buffer" }
bytes = "1.1.0"
entrystore = { path = "../../entrystore" }
io-uring = { version = "0.5.3", features = ["unstable"] }
libc = "0.2.126"
net = { path = "../../net" }
protocol-ping = { path = "../../protocol/ping" }
session-common = { path = "../../session/common" }
slab = "0.4.2"
