[package]
name = "server-iouring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logger = { path = "../../logger" }

[target.'cfg(target_os = "linux")'.dependencies]
admin = { path = "../admin" }
buffer = { path = "../../buffer" }
common = { path = "../../common" }
config = { path = "../../config" }
crossbeam-channel = "0.5.0"
entrystore = { path = "../../entrystore" }
io-uring = { version = "0.5.3", features = ["unstable"] }
libc = "0.2.126"
mio = "0.8.4"
net = { path = "../../net" }
protocol-common = { path = "../../protocol/common" }
queues = { path = "../../queues" }
rustcommon-metrics = { git = "https://github.com/twitter/rustcommon" }
session = { path = "../../session" }
slab = "0.4.2"
waker = { path = "../waker" }
